[package]
name = "raknet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
futures = "0.3.25"
byte-util = { path = "../byte-util" }
packet-builder = { path = "../packet-builder" }
